<resources>
    <string name="app_name">Team85</string>
    <string name="athlete_picture">Athlete picture</string>
    <string name="evolution_points">Evolution points</string>
    <string name="m_daille">Médaille</string>
    <string name="g_n_ral">Général</string>
    <string name="m_daille_generale">Médaille Generale</string>
    <string name="forme">Forme :</string>
    <string name="forme_icone">Icon forme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="athl_tes">Athlètes</string>
    <string name="calendrier">Calendrier</string>
    <string name="segments">Segments</string>
    <string name="records">Records</string>
    <string name="classements">Classements</string>
    <string name="bike_icon">Bike icon</string>
    <string name="run_icon">Run icon</string>
    <string name="walk_icon">Walk icon</string>
</resources>