<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_athletes"
        android:title="@string/athl_tes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_calendrier"
        android:title="@string/calendrier"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_segments"
        android:title="@string/segments"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_records"
        android:title="@string/records"
        android:icon="@android:drawable/ic_menu_mylocation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clsmt"
        android:title="@string/classements"
        app:showAsAction="never" />

</menu>