<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="position"
            type="com.bonnamy.dashboard.bo.AthletePosition" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark">

        <TextView
            android:id="@+id/position_color"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="@{android.graphics.Color.parseColor(position.color)}"
            tools:background="@color/dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/position_imgCardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:elevation="12dp"
            app:cardCornerRadius="40dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/position_color"
            app:layout_constraintRight_toLeftOf="@id/positon_points_semaine"
            app:layout_constraintBottom_toTopOf="@id/position_medal">
            <ImageView
                android:id="@+id/position_picture"
                android:layout_height="80dp"
                android:layout_width="match_parent"
                binding:urlImageAthlete="@{position.picture}"
                android:src="@drawable/ic_launcher_background"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/athlete_picture">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/positon_points_semaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{position.pointsFormat(position.points_semaine)}"
            tools:text="300 pts"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/position_imgCardView"
            app:layout_constraintRight_toLeftOf="@id/position_evolution"/>

        <ImageView
            android:id="@+id/position_evolution"
            android:layout_width="24dp"
            android:layout_height="24dp"
            imageResource="@{position.evolutionPointsIcon()}"
            tools:src="@tools:sample/avatars"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/positon_points_semaine"
            app:layout_constraintRight_toLeftOf="@id/position_guideLine"
            android:contentDescription="@string/evolution_points"/>

        <ImageView
            android:id="@+id/position_medal"
            android:layout_width="24dp"
            android:layout_height="24dp"
            imageResource="@{position.medalIcon(position.classement_semaine)}"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toBottomOf="@id/position_imgCardView"
            app:layout_constraintLeft_toRightOf="@id/position_color"
            app:layout_constraintRight_toLeftOf="@id/position_classement_semaine"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/m_daille"/>

        <TextView
            android:id="@+id/position_classement_semaine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{position.classementFormat(position.classement_semaine)}"
            tools:text="1er"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/position_imgCardView"
            app:layout_constraintLeft_toRightOf="@id/position_medal"
            app:layout_constraintRight_toLeftOf="@id/positon_points_semaine"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/position_bike"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_bike"
            app:layout_constraintTop_toBottomOf="@id/positon_points_semaine"
            app:layout_constraintRight_toLeftOf="@id/position_bike_details"
            app:layout_constraintLeft_toRightOf="@id/position_imgCardView"
            app:layout_constraintBottom_toTopOf="@id/position_run"
            android:contentDescription="@string/bike_icon" />

        <ImageView
            android:id="@+id/position_run"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_run"
            app:layout_constraintTop_toBottomOf="@id/position_bike"
            app:layout_constraintRight_toLeftOf="@id/position_run_details"
            app:layout_constraintLeft_toRightOf="@id/position_imgCardView"
            app:layout_constraintBottom_toTopOf="@id/position_walk"
            android:contentDescription="@string/run_icon" />

        <ImageView
            android:id="@+id/position_walk"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_walk"
            app:layout_constraintTop_toBottomOf="@id/position_run"
            app:layout_constraintRight_toLeftOf="@id/position_walk_details"
            app:layout_constraintLeft_toRightOf="@id/position_imgCardView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/walk_icon" />

        <TextView
            android:id="@+id/position_bike_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{position.detailsSemaineFormat(1)}"
            tools:text="100km"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/positon_points_semaine"
            app:layout_constraintRight_toLeftOf="@id/position_guideLine"
            app:layout_constraintLeft_toRightOf="@id/position_bike"
            app:layout_constraintBottom_toTopOf="@id/position_run_details"/>

        <TextView
            android:id="@+id/position_run_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{position.detailsSemaineFormat(2)}"
            tools:text="10km"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/position_bike_details"
            app:layout_constraintRight_toLeftOf="@id/position_guideLine"
            app:layout_constraintLeft_toRightOf="@id/position_run"
            app:layout_constraintBottom_toTopOf="@id/position_walk_details"/>

        <TextView
            android:id="@+id/position_walk_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{position.detailsSemaineFormat(3)}"
            tools:text="1km"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/position_run_details"
            app:layout_constraintRight_toLeftOf="@id/position_guideLine"
            app:layout_constraintLeft_toRightOf="@id/position_walk"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/position_guideLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

        <View
            android:id="@+id/position_divider"
            android:layout_width="1dp"
            android:layout_height="150dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/position_guideLine"/>

        <TextView
            android:id="@+id/position_general_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_n_ral"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/position_guideLine"
            app:layout_constraintBottom_toTopOf="@id/position_general_medal"/>

        <ImageView
            android:id="@+id/position_general_medal"
            android:layout_width="24dp"
            android:layout_height="24dp"
            imageResource="@{position.medalIcon(position.classement_general)}"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toBottomOf="@id/position_general_title"
            app:layout_constraintLeft_toRightOf="@id/position_guideLine"
            app:layout_constraintRight_toLeftOf="@id/position_general_classement"
            app:layout_constraintBottom_toTopOf="@id/position_general_points"
            android:contentDescription="@string/m_daille_generale"/>

        <TextView
            android:id="@+id/position_general_classement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{position.classementFormat(position.classement_general)}"
            tools:text="1er"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/position_general_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/position_general_medal"
            app:layout_constraintBottom_toTopOf="@id/position_general_points"/>

        <TextView
            android:id="@+id/position_general_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{position.pointsFormat(position.points_general)}"
            tools:text="52 pts"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/position_general_medal"
            app:layout_constraintLeft_toRightOf="@id/position_guideLine"
            app:layout_constraintRight_toLeftOf="@id/position_general_gain"
            app:layout_constraintBottom_toTopOf="@id/position_forme_title"/>

        <TextView
            android:id="@+id/position_general_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{position.gainGeneralFormat}"
            tools:text="+3"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/position_general_medal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/position_general_points"
            app:layout_constraintBottom_toTopOf="@id/position_forme_title"/>

        <TextView
            android:id="@+id/position_forme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forme"
            android:textColor="@color/white"
            android:paddingHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/position_general_points"
            app:layout_constraintLeft_toRightOf="@id/position_guideLine"
            app:layout_constraintBottom_toTopOf="@id/position_forme_icon"/>

        <ImageView
            android:id="@+id/position_forme_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            imageResource="@{position.formeIcon()}"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toBottomOf="@id/position_forme_title"
            app:layout_constraintLeft_toRightOf="@id/position_guideLine"
            app:layout_constraintRight_toLeftOf="@id/position_forme"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/forme_icone"/>

        <TextView
            android:id="@+id/position_forme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{position.formeFormat}"
            tools:text="85%"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/position_forme_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/position_forme_icon"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/position_divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>